test-utils/proc-macros/tests/compile-fail/unknown_family.rs
#![allow(unused_imports)]

use test_utils::upstream;

#[upstream(sqlite)]
#[test]
fn bad_family() {}

fn main() {}
