test-utils/proc-macros/tests/compile-fail/unknown_family.stderr
error: unknown database family 'sqlite'; expected 'mysql' or 'postgres'
 --> tests/compile-fail/unknown_family.rs:5:12
  |
5 | #[upstream(sqlite)]
  |            ^^^^^^
